2004-11-22  Francois Dumont  <dums@stlport...>

	* src/explore/Makefiles/nmake/evc3.mak, evc4.mak: removal of the useless 
	/DPLATFORM macro definition thanks Ulrich Eckhardt report and Michael Fink
	patch.

	* stlport/cstdlib: extension of the div overload for long input up to MSVC7.1
	thanks Micheal Fink report.

2004-11-16  Francois Dumont  <dums@stlport...>

	* src/explore/configure.bat: Add of the --rtl-static and --rtl-dynamic
	configuration options to force use of static or dynamic C runtime thanks
	Michael Fink.

	* stlport/config/stl_msvc.h: undef of the _STLP_USING_CROSS_NATIVE_RUNTIME_LIB
	for the evc platform that only have the static C runtime version thanks
	Michael Fink.

	* stlport/config/stl_bc.h, stl_dmc.h, stl_solaris.h: Removal of all references
	to the deprecated _STLP_NO_OWN_IOSTREAMS and _STLP_NO_NEW_IOSTREAMS macros.

	* stlport/cmath, stl/_cmath.h: Modification of the import of the pow function
	for MSVC6 that has a bugged overload thanks Michael Fink report.
	 
2004-11-09  Francois Dumont  <dums@stlport...>

	* test/unit/config_test.cpp: Creation of a test case to check correct
	platform/compiler configuration.

	* stlport/config/stl_msvc.h: Definition of the _STLP_HAS_NATIVE_FLOAT_ABS
	now start with MSVC6.
	
	* stlport/cstdlib, stl/_cmath.h: Addition of some missing math function
	 overloads for MSVC6.
	
2004-11-05  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_msvc.h: Definition of the _STLP_HAS_NATIVE_FLOAT_ABS
	starting with MSVC .Net 2002 thanks Kevin Bluck report.

	* test/unit/cmath_test.cpp: Creation of a test case to check correct import
	and extensions of C functions.

2004-11-04  Petr Ovtchenkov  <ptr@island...>

	* src/explore/Makefiles: added templates CC.mak for SunPro's CC compilers;
	ones should be checked and fixed with real compiler.

2004-11-04  Francois Dumont  <dums@stlport...>

	* stlport/stl/_function.h, _queue.h, _stack.h, _map.h, _iterator.h: 
	restoration of the Standard names of the protected datas.