@@ -44,10 +44,17 @@ using _STLP_VENDOR_CSTD::ldiv_t;
 using _STLP_VENDOR_CSTD::size_t;
 
 #  ifndef _STLP_NO_CSTD_FUNCTION_IMPORTS
+#   ifndef _STLP_WCE
+// these functions just don't exist on Windows CE
 using _STLP_VENDOR_CSTD::abort;
+using _STLP_VENDOR_CSTD::getenv;
+using _STLP_VENDOR_CSTD::mblen;
+using _STLP_VENDOR_CSTD::mbtowc;
+using _STLP_VENDOR_CSTD::system;
+using _STLP_VENDOR_CSTD::bsearch;
+#   endif
 using _STLP_VENDOR_CSTD::atexit;
 using _STLP_VENDOR_CSTD::exit;
-using _STLP_VENDOR_CSTD::getenv;
 using _STLP_VENDOR_CSTD::calloc;
 using _STLP_VENDOR_CSTD::free;
 using _STLP_VENDOR_CSTD::malloc;
@@ -55,19 +62,17 @@ using _STLP_VENDOR_CSTD::realloc;
 using _STLP_VENDOR_CSTD::atof;
 using _STLP_VENDOR_CSTD::atoi;
 using _STLP_VENDOR_CSTD::atol;
-using _STLP_VENDOR_CSTD::mblen;
 using _STLP_VENDOR_CSTD::mbstowcs;
-using _STLP_VENDOR_CSTD::mbtowc;
 using _STLP_VENDOR_CSTD::strtod;
 using _STLP_VENDOR_CSTD::strtol;
 using _STLP_VENDOR_CSTD::strtoul;
-using _STLP_VENDOR_CSTD::system;
 
 #    if !(defined (_STLP_NO_NATIVE_WIDE_STREAMS) || defined (_STLP_NO_MBSTATE_T))
 using _STLP_VENDOR_CSTD::wcstombs;
+#     ifndef _STLP_WCE
 using _STLP_VENDOR_CSTD::wctomb;
+#     endif
 #    endif
-using _STLP_VENDOR_CSTD::bsearch;
 using _STLP_VENDOR_CSTD::qsort;
 // boris : if we do not have native float abs, we define ours; then we cannot do "using" for "other" abs 
 #    ifdef _STLP_HAS_NATIVE_FLOAT_ABS 
